se agrego dashboard

--- a/src/views/ProfilePaciente.html
+++ b/src/views/ProfilePaciente.html
@@ -1,15 +1,69 @@
-
 <html>
-    <head>
-      <title>Paciente</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body>
-    
-      <div class="container">
-    <h1>PROFILE PACIENTE</h1>
-      </div>
-    </body>
-  </html>
+  <head>
+    <title>Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../public/css/main.css">
+  </head>
+  <body>
+  <!--NAV VAR-->
   
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+       
+       
+        <div class="mx-auto order-0">
+            <a class="navbar-brand mx-auto" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" >Log in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./SignUp.html" >Sign Up</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
+      <!--  LOGIN    -->
+      <div class="container">
+        <div class="col-sm-6 mx-auto">
+          <div class="card mt-5">
+            <div class="card-body">
+              <h1 class="text-center">
+                <span class="fa fa-sign-in"></span>Login
+              </h1>
+  
+              <div id="alertLogin" class="alert alert-danger">
+                <h6>Ingresar credenciales validas</h6>
+              </div>
+  
+  
+              <form id="login">
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" class="form-control" />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" name="password" class="form-control" />
+                </div>
+                <input type="submit" class="btn btn-dark btn-lg" />
+              </form>
+  
+              <hr />
+              <div class="text-center">
+                <p>Need an account?<a href="./SignUp.html">Signup</a></p>
+                <p>Or Go<a href="./index.html">Home</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </body>
+  <script src="../public/Login.js"></script>
+</html>
