--- a/src/views/ProfileNutriologo.html
+++ b/src/views/ProfileNutriologo.html
@@ -1,15 +1,73 @@
-
 <html>
-    <head>
-      <title>Nutriologo</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body>
-    
-      <div class="container">
-    <h1>PROFILE NUTRIOLOGO</h1>
+  <head>
+    <title>Nutriologo</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="../public/css/dashboard.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="d-flex">
+      <div id="sidebar-container" class="bg-dark">
+        <div class="logo"><h4 class="text-light font-weight-bold">TEXTO</h4></div>
+        <div class="menu">
+          <a href="#" class="d-block text-light p-3"><i class="icon ion-md-apps mr-2 lead"></i>Dashboard</a>
+          <a href="#" class="d-block text-light p-3"><i class="icon ion-md-people mr-2 lead"></i></ion-icon>Users</a>
+          <a href="#" class="d-block text-light p-3"><i class="icon ion-md-stats mr-2 lead"></i></ion-icon>Stadistics</a>
+          <a href="#" class="d-block text-light p-3"><i class="icon ion-md-person mr-2 lead"></i></ion-icon>Profile</a>
+          <a href="#" class="d-block text-light p-3"><i class="icon ion-md-settings mr-2 lead"></i></ion-icon>Configuration</a>
+        </div>
       </div>
-    </body>
-  </html>
+      <!--NAV VAR-->
+      <div class="w-100">
+       <!--NAV VAR-->
   
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+    
+       
+        <div class="mx-auto order-0">
+          
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+               
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="../assets/avatar.png" class="rounded-circle avatar ">
+                  Francisco Javier 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Mi perfil</a>
+                  
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Cerrar Sesion</a>
+                </div>
+              </li>
+            </ul>
+        </div>
+    
+    </nav>
+      </div>
+    </div>
+  </body>
+   <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+</html>
