--- a/src/views/ClientesNutriologo.html
+++ b/src/views/ClientesNutriologo.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     
-    <script src="../public/ProfileNutriologo.js"></script>
+    <script src="../public/ClientesNutriologo.js"></script>
   
   </head>
   <body>
@@ -67,21 +67,39 @@
 
 <section id="content-perfil" class="container-fluid">
   <div class="container">
+    <h1 class="text-center mt-1">Clientes <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#clienteForm" id="addCliente">
+    <i class="icon ion-md-add"></i>
+    </button></h1>
     <div class="row">
       <div class="col d-flex justify-content-center">
-          <div class="card profile" style="width: 32rem;">
-            <img class="card-img-top" src="../assets/avatar.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title " id="p-nombre">Nombre</h5>
-              <p class="card-text" id="p-edad">Edad</p>
-              <p class="card-text"  id="p-correo">Correo</p>
-              <p class="card-text" id="p-genero">Genero</p>
-              <a href="#" class="btn btn-primary btn-block">Editar</a>
-          </div>
+        <div id="card-deck" class="card-deck ">
+        </div>
         </div>
       </div>
     </div>
   </div>
+</section>
+
+<section>
+  <div class="modal fade" id="clienteForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Agregar Cliente</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="formCliente">
+            <div class="form-group">
+              <label for="correo">Correo Electronico</label>
+              <input type="text" class="form-control" id="correo" placeholder="correo">
+            </div>
+            <div class="form-header">
+              <button type="button" class="btn btn-primary btn-block" id="btnBuscar">Añadir</i>
+            </div>
+
 </section>
       </div>
     </div>
